--- a/src/app/simulador-escalonamento/simulador-escalonamento.component.html
+++ b/src/app/simulador-escalonamento/simulador-escalonamento.component.html
@@ -2,7 +2,7 @@
 
 <section class="grid">
   <form [formGroup]="formularioProcesso" class="cartao">
-    <h3>Novo processo</h3>
+    <h3>{{ editingId ? 'Editar processo' : 'Novo processo' }}</h3>
     <div class="linha">
       <mat-form-field appearance="outline">
         <mat-label>ID</mat-label>
@@ -25,9 +25,22 @@
       </mat-form-field>
     </div>
 
-    <button mat-flat-button color="primary" (click)="adicionar()" [disabled]="formularioProcesso.invalid">
-      <mat-icon>add</mat-icon> Adicionar
-    </button>
+    <ng-container *ngIf="!editingId; else editButtons">
+      <button mat-flat-button color="primary" (click)="adicionar()" [disabled]="formularioProcesso.invalid">
+        <mat-icon>add</mat-icon> Adicionar
+      </button>
+    </ng-container>
+
+    <ng-template #editButtons>
+      <button mat-flat-button color="primary" (click)="salvarEdicao()" [disabled]="formularioProcesso.invalid">
+        <mat-icon>save</mat-icon> Salvar
+      </button>
+
+   
+      <button mat-stroked-button color="basic" type="button" (click)="cancelarEdicao()">
+        <mat-icon>close</mat-icon> Cancelar
+      </button>
+    </ng-template>
   </form>
 
   <div class="cartao">
@@ -50,6 +63,14 @@
       </mat-form-field>
     </div>
 
+   
+<div *ngIf="editingId && jaSimulou" style="margin: 6px 0 12px;">
+  <mat-slide-toggle [formControl]="formularioConfig.controls.preview">
+    Pré-visualizar métricas
+  </mat-slide-toggle>
+</div>
+
+
     <button mat-stroked-button color="primary" (click)="simular()">
       <mat-icon>play_arrow</mat-icon> Simular
     </button>
@@ -66,8 +87,8 @@
   <h3>Processos</h3>
 
   <p style="margin: 6px 0 12px;">
-    <strong>Algoritmo(s) selecionado(s):</strong>
-    {{ algoritmosSelecionados.length ? algoritmosSelecionados.join(', ') : '—' }}
+      <strong>Algoritmo(s) selecionado(s):</strong>
+      {{ algoritmosSelecionados.length ? algoritmosSelecionados.join(', ') : '—' }}
   </p>
 
   <table mat-table [dataSource]="processos()" class="mat-elevation-z1">
@@ -94,6 +115,9 @@
     <ng-container matColumnDef="acoes">
       <th mat-header-cell *matHeaderCellDef></th>
       <td mat-cell *matCellDef="let p">
+        <button mat-icon-button color="primary" (click)="editar(p)" [disabled]="!!editingId && editingId !== p.id">
+          <mat-icon>edit</mat-icon>
+        </button>
         <button mat-icon-button color="warn" (click)="remover(p.id)">
           <mat-icon>delete</mat-icon>
         </button>
