ajeitando o button voltar para a simulaçao

--- a/src/app/simulador-escalonamento/simulador-escalonamento.component.html
+++ b/src/app/simulador-escalonamento/simulador-escalonamento.component.html
@@ -411,7 +411,9 @@
           </ng-template>
 
           <div class="selecao-actions">
-            <button class="va-btn va-outline" (click)="voltarParaSimulacao()">Voltar para simulação</button>
+          <button (click)="voltarParaSimulacao()">Voltar para Simulação</button>
+
+
           </div>
         </section>
       </mat-tab>
